tests/NormalTests/paczka1/fuzzy1/36302469.err
Error in line 4: DcQoeZ A998 76,6
Error in line 2: wloFJ A998 57,0
Error in line 14: wloFJ S784 54,9
Error in line 18: mAdUIGTggfG A354 18,0
Error in line 20: mAdUIGTggfG S784 63,0
Error in line 24: DcQoeZ A354 62,6
Error in line 9: 69Lir A354 48,1
Error in line 27: 0vZDiSg6510 A202 27,6
Error in line 19: wloFJ A354 14,1
Error in line 12: S784 S784 5,8
Error in line 35: Pkk2ZC2 A354 66,4
